# third_party_libjpeg-turbo

./: BUILD.gn  ChangeLog.md  OAT.xml  README.OpenSource  bundle.json  install.py  jconfigint.h  jcphuff.c  jmorecfg.h  libjpeg-turbo-2.1.x-bugfix.patch  libjpeg-turbo-optimize.patch  libjpeg-turbo.spec  libjpeg-turbo_optimize.patch  liteos_adapting.patch  tjbench.c  tjexample.c  tjunittest.c  turbojpeg-jni.c  turbojpeg.c
java/: TJUnitTest.java
simd/: jsimd.h
simd/arm/: jsimd.c
simd/arm64/: jsimd.c
simd/i386/: jsimd.c
simd/mips/: jsimd.c
simd/powerpc/: jsimd.c
simd/x86_64/: jsimd.c
